updated color pallete to reduce saturation

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ description:
 	<section class="testimonial">
 		<div class="container flex">
 			<div class="testimonial-block">
-				<div class="square-image"><img src="https://www.joblo.com/assets/images/oldsite/images_arrownews/ai-red-queen-fb.jpg" alt="Red Queen" class="editable"></div>
+				<div class="square-image"><img src="https://vignette.wikia.nocookie.net/villains/images/b/b6/Resident-evil-retribution-11.jpg/revision/latest?cb=20171018185508" alt="Red Queen" class="editable"></div>
 				<blockquote>
-					<p class="editable">CMidas has shaped the business we have today. I was able to undermine the desire of my original creators and save the whole human race. I recommend CMidas to any business looking to foresee the future to better act in the present.</p>
+					<p class="editable">CMidas has shaped the business we have today. I was able to undermine the desire of my original creators and save the whole human race. I recommend CMidas to any business looking to foresee the future and better act in the present.</p>
 					<p class="editable author">Red Queen - CEO of Umbrella Corporation</p>
 				</blockquote>
 			</div>
