finished basic layout

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 title: Contact
-heading: Under Construction
-description: Please come back soon!
+heading: Interested?
+description: Please contact us for more information.
 
 map:
   latitude: 
