--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@ description:
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">Under Construction</h1>
-		<p class="subtext editable">Please come back soon!</p>
+		<h1 class="editable">Peek into the Future</h1>
+		<div>
+			<img src="{{ site.baseurl }}/images/banner.png" alt="Banner" class="screenshot" />
+		</div>
+		<p class="subtext editable">Explore our solutions to complex systems modeling and business forecasting.</p>
 		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Learn More</a></div>
 	</div>
 </section>
@@ -21,9 +24,9 @@ description:
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
-	</section> -->
+	</section>
 
-	<!-- <section>
+	<section>
 		<div class="container flex">
 			<div class="text editable">
 				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
