--- a/index.html
+++ b/index.html
@@ -1,27 +1,46 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: Solidity Language Portal
+description: All you need to know about Solidity in one place
 ---
+
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Get Started Free</a></div>
+		<h1 class="editable"><strong>SOLIDITY</strong></h1>
+		<h2 class="editable">Solidity is a statically-typed curly-braces programming language designed for developing smart contracts that run on the <a href="https://ethereum.org/en/">Ethereum Virtual Machine</a>.</h2>
+		<div class="cta button alt"><a href="https://solidity.readthedocs.io/en/v0.6.11/installing-solidity.html">Get Started</a></div>
 		<div>
-			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-		</div>
 	</div>
 </section>
+
+<section class="highlight-section">
+	<div>
+		<h3 class="editable">Solidity is still evolving rapidly, you can participate in the language design process by <strong><a href="https://solidity.readthedocs.io/en/latest/contributing.html">contributing</a></strong>.</h3>
+	</div>
+</section>
+
+<section class="content">
+		<div class="text-section">
+			<div class="text editable">
+				<h2>News & Announcements</h2>
+				<ul>
+					<li><p>The best way to stay up-to-date and well informed with Solidity’s progress is to follow the Solidity blog!</p></li>
+					<li><p>Need an upgrade? Check out this guide to upgrade your smart contracts since Solidity v0.6.</p></li>
+					<li><p>Solidity v0.7.0 is coming soon! Have a look at the breaking changelog to learn more</p></li>
+				</ul>
+			</div>
+		</div>
+	</section>
+</div>
 
 <div class="content">
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
+				<h2>RESOURCES FOR <strong>NEWBIES</strong></h2>
+				<p>As a beginner, we would recommend starting here and having a look at these cool tutorials. You could also do this or that. And have a look here, too! Enjoy!</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/doge_computer.png" alt="Doge" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -29,41 +48,22 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>GOVERNANCE & <strong>LANGUAGE DESIGN</strong></h2>
+				<p>We welcome you to  get involved and take part in out language design process.
+					<ul>
+						<li>Take part in the design discussions in the Github issues.</li>
+						<li>Join the solidity-users forum: proposals for new language features and qualities of existing aspects of the language can be discussed.</li>
+						<li>Take part in (feature) feedback surveys.</li>
+						<li>Join dedicated language design discussion calls, where one topic/issue/feature implementation is debated per call.</li>
+					</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/doge_computer.png" alt="Doge" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
 
-	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
-			</div>
-			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-			</div>
-		</div>
-	</section>
-
-	<section class="testimonial">
-		<div class="container flex">
-			<div class="testimonial-block">
-				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
-				<blockquote>
-					<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
-					<p class="editable author">Jim James - CEO of Global Corp.</p>
-				</blockquote>
-			</div>
-		</div>
-	</section>
-
-	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
-	</section>
+<section class="bottom-cta">
+		<h2 class="editable"><strong>You can find more resources on how to get started building on Ethereum <a href="https://ethereum.org/en/build/">here</a>.</h2>
+</section>
 </div>
