updating MVP and removing irrelevant template stuff

--- a/index.html
+++ b/index.html
@@ -5,65 +5,62 @@ description: All you need to know about Solidity in one place
 
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable"><strong>SOLIDITY</strong></h1>
-		<h2 class="editable">Solidity is a statically-typed curly-braces programming language designed for developing smart contracts that run on the <a href="https://ethereum.org/en/">Ethereum Virtual Machine</a>.</h2>
-		<div class="cta button alt"><a href="https://solidity.readthedocs.io/en/v0.6.11/installing-solidity.html">Get Started</a></div>
+		<h1 class="editable"><strong>SOLIDITY</strong></h1><br>
+		<h2 class="editable">Solidity is a statically-typed curly-braces programming language designed for developing smart contracts that run on <a href="https://ethereum.org/en/">Ethereum</a>.</h2>
+		<div class="cta button alt"><a href="https://solidity.readthedocs.io/en/v0.6.11/installing-solidity.html">GET STARTED</a></div>
 		<div>
 	</div>
 </section>
 
 <section class="highlight-section">
 	<div>
-		<h3 class="editable">Solidity is still evolving rapidly, you can participate in the language design process by <strong><a href="https://solidity.readthedocs.io/en/latest/contributing.html">contributing</a></strong>.</h3>
+		<h2 class="editable"><strong>Solidity is evolving rapidly.</strong></h2>
+		<div class="container flex">
+		<h3>You can help shaping it by providing your input and <strong><a href="https://solidity.readthedocs.io/en/latest/contributing.html">participating</a></strong> in the language design process.</h3>
+	</div>
 	</div>
 </section>
 
-<section class="content">
-		<div class="text-section">
+<div class="content">
+	<section>
+		<div class="container flex">
 			<div class="text editable">
-				<h2>News & Announcements</h2>
+				<h2><strong>RECENT ANNOUNCEMENTS</strong></h2>
 				<ul>
-					<li><p>The best way to stay up-to-date and well informed with Solidity’s progress is to follow the Solidity blog!</p></li>
-					<li><p>Need an upgrade? Check out this guide to upgrade your smart contracts since Solidity v0.6.</p></li>
-					<li><p>Solidity v0.7.0 is coming soon! Have a look at the breaking changelog to learn more</p></li>
+					<li><p>The best way to stay up-to-date with Solidity’s progress is to follow the <a href="https://solidity.ethereum.org">Solidity blog</a>!</p></li>
+					<li><p>Need an upgrade? Check out this guide on how to best <a href="https://solidity.readthedocs.io/en/v0.6.11/060-breaking-changes.html#how-to-update-your-code">update your code</a> to Solidity v0.6.x.</p></li>
+					<li><p>Solidity v0.7.0 is coming soon! Have a look at the <a href="https://github.com/ethereum/solidity/blob/breaking/Changelog.md">breaking changelog</a> to learn more about the upcoming changes.</p></li>
 				</ul>
 			</div>
 		</div>
 	</section>
 </div>
 
+<section class="testimonial">
+		<div class="container flex">
+				<img src="{{ site.baseurl }}/images/tryit_sol.png" alt="Solidity Compiler" class="screenshot editable" />
+		</div>
+</section>
+
+<section class="bottom-cta">
+	<div class="container flex">
+		<h2 class="editable"><strong>As a beginner, you find great tutorials, resources and tools that help you get started building with Solidity on the <a href="https://ethereum.org/en/build/">ethereum.org website</a>.<br><br>Alternatively, learn the basics about blockchain, smart contracts and the EVM <a href="https://solidity.readthedocs.io/en/v0.6.11/introduction-to-smart-contracts.html">in our docs</a>.</strong></h2>
+	</div>
+</section>
+
 <div class="content">
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>RESOURCES FOR <strong>NEWBIES</strong></h2>
-				<p>As a beginner, we would recommend starting here and having a look at these cool tutorials. You could also do this or that. And have a look here, too! Enjoy!</p>
-			</div>
-			<div class="image">
-				<img src="{{ site.baseurl }}/images/doge_computer.png" alt="Doge" class="screenshot editable" />
-			</div>
-		</div>
-	</section>
-
-	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>GOVERNANCE & <strong>LANGUAGE DESIGN</strong></h2>
-				<p>We welcome you to  get involved and take part in out language design process.
+				<h2><strong>GOVERNANCE & LANGUAGE DESIGN</strong></h2>
+				<p>We welcome Solidity power users, auditors, security experts and tooling developers to get involved and actively contribute the Solidity language design process:
 					<ul>
-						<li>Take part in the design discussions in the Github issues.</li>
-						<li>Join the solidity-users forum: proposals for new language features and qualities of existing aspects of the language can be discussed.</li>
-						<li>Take part in (feature) feedback surveys.</li>
-						<li>Join dedicated language design discussion calls, where one topic/issue/feature implementation is debated per call.</li>
+						<li><p>Take part in the design discussions directly in the <a href="https://github.com/ethereum/solidity/issues">Github issues</a>.</p></li>
+						<li><p>Join the <a href="https://groups.google.com/g/solidity-users">solidity-users forum</a>, where proposals for new language features and qualities of existing aspects of the language can be discussed.</p></li>
+						<li><p>Give input by completing (feature) feedback surveys which are regularly distributed via Twitter and the solidity-users forum.</p></li>
+						<li><p>Join dedicated language design discussion calls, in which one topic, issue or feature implementation is debated per call.</p></li>
 					</p>
 			</div>
-			<div class="image">
-				<img src="{{ site.baseurl }}/images/doge_computer.png" alt="Doge" class="screenshot editable" />
-			</div>
 		</div>
 	</section>
-
-<section class="bottom-cta">
-		<h2 class="editable"><strong>You can find more resources on how to get started building on Ethereum <a href="https://ethereum.org/en/build/">here</a>.</h2>
-</section>
 </div>
