--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
-title: Not Found
-description: This does not exist
+title: Whoops!
+description: The page you are looking for does not seem to exist (in this universe). 🪐
 permalink: /404.html
 sitemap: false
 ---
