upload new framework

--- a/index.html
+++ b/index.html
@@ -3,21 +3,11 @@ title: Solidity Language Portal
 description: All you need to know about Solidity in one place
 ---
 
-<section class="hero">
-	<div class="text-container">
-		<h1 class="editable"><strong>SOLIDITY</strong></h1><br>
-		<h2 class="editable">Solidity is a statically-typed curly-braces programming language designed for developing smart contracts that run on <a href="https://ethereum.org/en/">Ethereum</a>.</h2>
-		<div class="cta button alt"><a href="https://solidity.readthedocs.io/en/v0.6.11/installing-solidity.html">GET STARTED</a></div>
-		<div>
-	</div>
-</section>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 
-<section class="highlight-section">
-	<div>
-		<h2 class="editable"><strong>Solidity is evolving rapidly.</strong></h2>
-		<div class="container flex">
-		<h3>You can help shaping it by providing your input and <strong><a href="https://solidity.readthedocs.io/en/latest/contributing.html">participating</a></strong> in the language design process.</h3>
-	</div>
+<section class="hero">
+	<div class="container flex">
+			<img src="{{ site.baseurl }}/images/solid_solidity_small.png" alt="Solidity Hero" class="hero-image"/>
 	</div>
 </section>
 
@@ -25,42 +15,69 @@ description: All you need to know about Solidity in one place
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2><strong>RECENT ANNOUNCEMENTS</strong></h2>
+				<h2>Solidity is a statically-typed curly-braces programming language designed for developing smart contracts that run on <a href="https://ethereum.org/en/">Ethereum</a>.</h2>
+				<div class="cta button alt"><a href="https://solidity.readthedocs.io/en/latest/installing-solidity.html">get started</a></div>
+			</div>
+			<img src="{{ site.baseurl }}/images/solidity-grey.png" alt="Solidity Hero" class="small-image"/>
+		</div>
+	</section>
+</div>
+
+<section class="highlight-section">
+	<div>
+		<div class="container flex">
+		<h2>Solidity is a relatively young language and is evolving rapidly. You can shape it by providing your input and participating in the <strong><a href="https://solidity.readthedocs.io/en/latest/contributing.html">language design process</a></strong>.</h2>
+	</div>
+	</div>
+</section>
+
+<div class="content-dark">
+	<section>
+		<div class="container flex">
+			<div class="text editable">
+				<h2><strong>newsflash</strong></h2>
 				<ul>
-					<li><p>The best way to stay up-to-date with Solidity’s progress is to follow the <a href="https://solidity.ethereum.org">Solidity blog</a>!</p></li>
-					<li><p>Need an upgrade? Check out this guide on how to best <a href="https://solidity.readthedocs.io/en/v0.6.11/060-breaking-changes.html#how-to-update-your-code">update your code</a> to Solidity v0.6.x.</p></li>
-					<li><p>Solidity v0.7.0 is coming soon! Have a look at the <a href="https://github.com/ethereum/solidity/blob/breaking/Changelog.md">breaking changelog</a> to learn more about the upcoming changes.</p></li>
-				</ul>
+					<h3><li>The best way to stay up-to-date with Solidity’s progress is to follow the <a href="https://solidity.ethereum.org">Solidity blog</a>!</li></h3>
+					<h3><li> Solidity v0.7.0 is out! Check out <a href="https://solidity.readthedocs.io/en/latest/070-breaking-changes.html#how-to-update-your-code">this guide</a> on how to best update your code to Solidity v0.7.x.</li></h3>
 			</div>
 		</div>
 	</section>
 </div>
 
-<section class="testimonial">
+<section class="playground">
 		<div class="container flex">
 				<img src="{{ site.baseurl }}/images/tryit_sol.png" alt="Solidity Compiler" class="screenshot editable" />
 		</div>
 </section>
 
-<section class="bottom-cta">
+<section class="highlight-section-left">
 	<div class="container flex">
-		<h2 class="editable"><strong>As a beginner, you find great tutorials, resources and tools that help you get started building with Solidity on the <a href="https://ethereum.org/en/build/">ethereum.org website</a>.<br><br>Alternatively, learn the basics about blockchain, smart contracts and the EVM <a href="https://solidity.readthedocs.io/en/v0.6.11/introduction-to-smart-contracts.html">in our docs</a>.</strong></h2>
+		<div class="text editable">
+			<h2><strong>getting started</strong></h2>
+		<h2 class="editable">As a beginner, you find great tutorials, resources and tools that help you get started building with Solidity on the <a href="https://ethereum.org/en/build/">ethereum.org</a> website.<br><br>Alternatively, learn the basics about blockchain, smart contracts and the EVM in the <a href="https://solidity.readthedocs.io/en/latest/introduction-to-smart-contracts.html">Solidity docs</a>.</h2>
 	</div>
 </section>
 
-<div class="content">
+<div class="content-dark">
 	<section>
 		<div class="container flex">
+			<img src="{{ site.baseurl }}/images/sol_design.png" alt="Solidity Hero" class="image"/>
 			<div class="text editable">
-				<h2><strong>GOVERNANCE & LANGUAGE DESIGN</strong></h2>
-				<p>We welcome Solidity power users, auditors, security experts and tooling developers to get involved and actively contribute the Solidity language design process:
+				<h2><strong>language design</strong><br><br>
+					We welcome Solidity power users, auditors, security experts and tooling developers to 
+					get involved and actively contribute the Solidity language design process.</h2>
+			</div>
+		</div>
+	</section>
+</div>
+
+<div class="content-dark">
+		<div class="container flex">
 					<ul>
 						<li><p>Take part in the design discussions directly in the <a href="https://github.com/ethereum/solidity/issues">Github issues</a>.</p></li>
 						<li><p>Join the <a href="https://groups.google.com/g/solidity-users">solidity-users forum</a>, where proposals for new language features and qualities of existing aspects of the language can be discussed.</p></li>
 						<li><p>Give input by completing (feature) feedback surveys which are regularly distributed via Twitter and the solidity-users forum.</p></li>
 						<li><p>Join dedicated language design discussion calls, in which one topic, issue or feature implementation is debated per call.</p></li>
 					</p>
-			</div>
 		</div>
-	</section>
 </div>
