finetuning MVP and deleting not needed code parts

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ description: All you need to know about Solidity in one place
 	<div class="container flex">
 		<div class="text editable">
 			<h2><strong>getting started</strong></h2>
-		<h2 class="editable">As a beginner, you find great tutorials, resources and tools that help you get started building with Solidity on the <a href="https://ethereum.org/en/build/">ethereum.org</a> website.<br><br>Alternatively, learn the basics about blockchain, smart contracts and the EVM in the <a href="https://solidity.readthedocs.io/en/latest/introduction-to-smart-contracts.html">Solidity docs</a>.</h2>
+		<h3 class="editable">As a beginner, you find great tutorials, resources and tools that help you get started building with Solidity on the <a href="https://ethereum.org/en/build/">ethereum.org</a> website.<br><br>Alternatively, learn the basics about blockchain, smart contracts and the EVM in the <a href="https://solidity.readthedocs.io/en/latest/introduction-to-smart-contracts.html">Solidity docs</a>.</h3>
 	</div>
 </section>
 
@@ -63,9 +63,9 @@ description: All you need to know about Solidity in one place
 		<div class="container flex">
 			<img src="{{ site.baseurl }}/images/sol_design.png" alt="Solidity Hero" class="image"/>
 			<div class="text editable">
-				<h2><strong>language design</strong><br><br>
-					We welcome Solidity power users, auditors, security experts and tooling developers to 
-					get involved and actively contribute the Solidity language design process.</h2>
+				<h2><strong>language design</strong></h2><br>
+				<h3>We welcome Solidity power users, auditors, security experts and tooling developers to 
+					get involved and actively contribute the Solidity language design process.</h3>
 			</div>
 		</div>
 	</section>
