added temp pages for about and stoires

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@ description:
 		<div>
 			<img src="{{ site.baseurl }}/images/banner.png" alt="Banner" class="screenshot" />
 		</div>
-		<p class="subtext editable">Explore our solutions to complex systems modeling and business forecasting.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Learn More</a></div>
+		<!-- <p class="subtext editable">Explore our forecasting solutions and complex systems modeling tools.</p>
+		<p class="subtext editable">Explore our business forecasting solutions and complex systems modeling tools.</p>
+		<p class="subtext editable">Complex systems modeling tools for business forecasting.</p>
+		<p class="subtext editable">Complex systems modeling tools applied to business forecasting.</p> -->
+		<p class="subtext editable">Complex systems modeling theory applied to business forecasting solutions.</p>
+		<!-- <p class="subtext editable">From complex systems modeling theory to applied business forecasting solutions.</p>
+		<p class="subtext editable">From complex systems modeling theory to real-world proven business forecasting solutions.</p> -->
+		<div class="cta button alt"><a href="{{ site.baseurl }}/about/">Learn More</a></div>
 	</div>
 </section>
 
@@ -52,7 +58,7 @@ description:
 
 	<section class="bottom-cta">
 		<h2 class="editable">Your peace of mind living the present starts here.</h2>
-		<div class="button alt"><a href="{{ site.baseurl }}/contact/">Learn More</a></div>
+		<div class="button alt"><a href="{{ site.baseurl }}/contact/">Contact Us</a></div>
 	</section>
 
 </div>
