--- a/team.html
+++ b/team.html
@@ -1,8 +1,8 @@
 ---
-title: Meet the Leadership
+title: Meet our Leadership
 description: 
 ---
-<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
+<!-- <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p> -->
 <ul class="staff">
 	{% for person in site.staff_members %}
 		<li>
@@ -12,3 +12,5 @@ description:
 		</li>
 	{% endfor %}
 </ul>
+
+
