--- a/index.html
+++ b/index.html
@@ -4,18 +4,11 @@ description:
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">Peek into the Future</h1>
 		<div>
-			<img src="{{ site.baseurl }}/images/banner.png" alt="Banner" class="screenshot" />
+			<img src="{{ site.baseurl }}/images/graph_banner2.jpg" alt="Banner" />
 		</div>
-		<!-- <p class="subtext editable">Explore our forecasting solutions and complex systems modeling tools.</p>
-		<p class="subtext editable">Explore our business forecasting solutions and complex systems modeling tools.</p>
-		<p class="subtext editable">Complex systems modeling tools for business forecasting.</p>
-		<p class="subtext editable">Complex systems modeling tools applied to business forecasting.</p> -->
-		<p class="subtext editable">Complex systems modeling theory applied to business forecasting solutions.</p>
-		<!-- <p class="subtext editable">From complex systems modeling theory to applied business forecasting solutions.</p>
-		<p class="subtext editable">From complex systems modeling theory to real-world proven business forecasting solutions.</p> -->
-		<div class="cta button alt"><a href="{{ site.baseurl }}/about/">Learn More</a></div>
+		<br><h2>Data-driven modeling and engineering applied to finance and options trading.</h2>
+		<!-- <div class="cta button alt"><a href="{{ site.baseurl }}/about/">Learn More</a></div> -->
 	</div>
 </section>
 
@@ -23,8 +16,8 @@ description:
 	<!-- <section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>Title</h2>
-				<p>Text.</p>
+				<h2>State-of-the-art machine learning algorithms applied to finance modeling.</h2>
+				<p>Finance modeling (data seuqnce) is challenging. Team is capable and qualified. Daily influx of data. Models updated daily. Tested before deployment.</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
@@ -56,9 +49,9 @@ description:
 		</div>
 	</section>
 
-	<section class="bottom-cta">
+	<!-- <section class="bottom-cta">
 		<h2 class="editable">Your peace of mind living the present starts here.</h2>
 		<div class="button alt"><a href="{{ site.baseurl }}/contact/">Contact Us</a></div>
-	</section>
+	</section> -->
 
 </div>
