--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ description:
 		<div>
 			<img src="{{ site.baseurl }}/images/graph_banner2.jpg" alt="Banner" />
 		</div>
-		<br><h2>Data-driven modeling and engineering applied to finance and options trading.</h2>
+		<br><br><h1>Data-Driven Solutions Applied to Finance Modeling and Quantitative Trading</h1>
 		<!-- <div class="cta button alt"><a href="{{ site.baseurl }}/about/">Learn More</a></div> -->
 	</div>
 </section>
