Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@ description: Track and optimize your sales team in real time
 
 	<section class="bottom-cta">
 		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
+		<div class="button alt"><a class="editable" href="#">Get Started Free</a></div>
 	</section>
 </div>
