Updated 'pricing.html' via CloudCannon

--- a/pricing.html
+++ b/pricing.html
@@ -87,7 +87,7 @@ faq:
 </div>
 
 {% if page.faq %}
-	<h2>Pricing FAQ</h2>
+	<h2 class="editable">Pricing FAQ</h2>
 	<dl class="faq cms-editor-link" 
 		 data-cms-editor-link-style="modal" 
 		 data-cms-editor-link="cloudcannon:#faq">
