Updated 'contact.html' via CloudCannon

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@ map:
 		            target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
 
 		<h3 class="editable">Email</h3>
-		<p><a href="mailto:support@example.com">support@example.com</a></p>
+		<p><a class="editable" href="mailto:support@example.com">support@example.com</a></p>
 	</div>
 </div>
 
