Updated 'contact-success.html' via CloudCannon

--- a/contact-success.html
+++ b/contact-success.html
@@ -2,5 +2,5 @@
 title: Contact Success
 ---
 
-<h2>Success</h2>
-<p class="subtext">Your message is sent. We'll be in touch soon.</p>
+<h2 class="editable">Success</h2>
+<p class="subtext editable">Your message is sent. We'll be in touch soon.</p>
