--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: Real people, serving a real God.
 <section class="hero">
 	<div class="text-container">
 		<h2 class="editable">Real people, serving a real God.</h2>
-		<p class="subtext editable"> Join us at 10am on Sunday</p>
+		<p class="subtext editable"> Join us at 8:30am or 11am on Sunday</p>
 		<div class="cta button alt"><a href="https://www.youtube.com/channel/UCQzK8bAIBWbO0aI6OZpbGIA">Subscribe on YouTube</a></div>
 	</div>
 </section>
