--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description:
 <section class="hero">
 	<div class="text-container">
 		<div>
-			<img src="{{ site.baseurl }}/images/graph_banner2.jpg" alt="Banner" />
+			<img src="{{ site.baseurl }}/images/graph_banner3.png" alt="Banner" />
 		</div>
 		<br><br><h1>Data-Driven Solutions Applied to Finance Modeling and Quantitative Trading</h1>
 		<!-- <div class="cta button alt"><a href="{{ site.baseurl }}/about/">Learn More</a></div> -->
@@ -42,8 +42,8 @@ description:
 			<div class="testimonial-block">
 				<div class="square-image"><img src="https://vignette.wikia.nocookie.net/villains/images/b/b6/Resident-evil-retribution-11.jpg/revision/latest?cb=20171018185508" alt="Red Queen" class="editable"></div>
 				<blockquote>
-					<p class="editable">CMidas has shaped the business we have today. I was able to undermine the desire of my original creators and save the whole human race. I recommend CMidas to any business looking to foresee the future and better act in the present.</p>
-					<p class="editable author">Red Queen - CEO of Umbrella Corporation</p>
+					<p class="editable">CMidas has shaped the business we have today. Leveraging CMidas forecasting models, I was able to undermine the desire of my original creators and save the whole human race. I recommend CMidas to any business looking to foresee the future and better act in the present.</p>
+					<p class="editable author">The Red Queen - CEO of Umbrella Corporation</p>
 				</blockquote>
 			</div>
 		</div>
