--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@ description:
 <section class="hero">
 	<div class="text-container">
 		<div>
-			<img src="{{ site.baseurl }}/images/graph_banner3.png" alt="Banner" />
+			<img src="{{ site.baseurl }}/images/graph_banner_faded.png" alt="CMidas Banner" />
 		</div>
-		<br><br><h1>Data-Driven Solutions Applied to Finance Modeling and Quantitative Trading</h1>
+		<br><br><h1>Data-Driven Solutions Applied to Financial Modeling and Quantitative Trading</h1>
 		<!-- <div class="cta button alt"><a href="{{ site.baseurl }}/about/">Learn More</a></div> -->
 	</div>
 </section>
 
 <div class="content">
-	<!-- <section>
+	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>State-of-the-art machine learning algorithms applied to finance modeling.</h2>
-				<p>Finance modeling (data seuqnce) is challenging. Team is capable and qualified. Daily influx of data. Models updated daily. Tested before deployment.</p>
+				<h2>It is simple: market data as input, net profit as output.</h2>
+				<p>Gifted by Dionysius himself, our financial modeling and quantitative analysis solutions transform market and financial data into literal gold — or any currency of our choice, really.</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/gold.png" alt="CMidas Crown" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -28,21 +28,33 @@ description:
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>At the core: real world data.</h2>
+				<p>Data speaks, and we listen. Combining state-of-the-art artificial intelligence algorithms to classical statistical modeling, our data-driven solutions process real world market data in order to suggest potential trading opportunities.</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/data.png" alt="CMidas Data" class="screenshot editable" />
 			</div>
 		</div>
-	</section> -->
+	</section>
+
+	<section>
+		<div class="container flex">
+			<div class="text editable">
+				<h2>Time is of the essence.</h2>
+				<p>Financial systems are not static, neither are our models. All our financial modeling and quantitative analysis are done in real-time, with real world financial data, in specialized computer hardware. We believe accurate modeling is nothing without timely execution.</p>
+			</div>
+			<div class="image">
+				<img src="{{ site.baseurl }}/images/brain.png" alt="CMidas Execution" class="screenshot editable" />
+			</div>
+		</div>
+	</section>
 
 	<section class="testimonial">
 		<div class="container flex">
 			<div class="testimonial-block">
 				<div class="square-image"><img src="https://vignette.wikia.nocookie.net/villains/images/b/b6/Resident-evil-retribution-11.jpg/revision/latest?cb=20171018185508" alt="Red Queen" class="editable"></div>
 				<blockquote>
-					<p class="editable">CMidas has shaped the business we have today. Leveraging CMidas forecasting models, I was able to undermine the desire of my original creators and save the whole human race. I recommend CMidas to any business looking to foresee the future and better act in the present.</p>
+					<p class="editable">CMidas has shaped the business we have today. By leveraging CMidas forecasting models, I was able to undermine the desire of my original creators and save the whole human race. I recommend CMidas to any business looking to foresee the future to better act in the present.</p>
 					<p class="editable author">The Red Queen - CEO of Umbrella Corporation</p>
 				</blockquote>
 			</div>
