--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ description:
 	</div>
 </section>
 
-<div class="content">
+<div class="content">	
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>It is simple: market data as input, net profit as output.</h2>
+				<h2><strong>It is simple: market data as input, net profit as output.</strong></h2>
 				<p>Gifted by Dionysius himself, our financial modeling and quantitative analysis solutions transform market and financial data into literal gold — or any currency of our choice, really.</p>
 			</div>
 			<div class="image">
@@ -28,7 +28,7 @@ description:
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>At the core: real world data.</h2>
+				<h2><strong>At the core: real world data.</strong></h2>
 				<p>Data speaks, and we listen. Combining state-of-the-art artificial intelligence algorithms to classical statistical modeling, our data-driven solutions process real world market data in order to suggest potential trading opportunities.</p>
 			</div>
 			<div class="image">
@@ -40,7 +40,7 @@ description:
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>Time is of the essence.</h2>
+				<h2><strong>Time is of the essence.</strong></h2>
 				<p>Financial systems are not static, neither are our models. All our financial modeling and quantitative analysis are done in real-time, with real world financial data, in specialized computer hardware. We believe accurate modeling is nothing without timely execution.</p>
 			</div>
 			<div class="image">
